<resources>
    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="moviesNotFound">No Movies yet...\nGo add a movie</string>
    <string name="movieError">Error : Couldn\'t add a movie...</string>

    <string name="MovieList">Movie Catalogue</string>
    <string name="AddMovie">Add Movie</string>

    <string name="MAPS_API_KEY">SECRET</string>
    <string name="movieMap">Cinemas near you</string>

    <string name="about">About Us</string>
    <string name="about_title">My Movie List</string>
    <string name="about_message">This app is a work in progress movie management app that people can use for their movie watch lists.</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="nav_header_title">My Movie List</string>
    <string name="nav_header_subtitle">ilikemovies@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="app_name">My Movie List</string>
    <string name="add_director">Please add a Director</string>
    <string name="add_release_date">Please add a Release Date</string>
    <string name="button_addMovie">Add Movie</string>
    <string name="hint_movieTitle">Movie Title</string>
    <string name="hint_movieGenre">Genre</string>
    <string name="hint_movieDirector">Director</string>
    <string name="menu_addMovie">Add</string>
    <string name="menu_cancelMovie">Cancel</string>
    <string name="enter_movie_title">Please Enter a Movie Title</string>
    <string name="enter_movie_genre">Please Enter a Movie Genre</string>
    <string name="enter_movie_poster">Please Add a Poster</string>
    <string name="enter_movie_director">Please Enter a Movie Director</string>
    <string name="save_movie">Save Movie</string>
    <string name="button_addImage">Add Poster</string>
    <string name="select_movie_image">Select Movie Poster</string>
    <string name="change_movie_image">Change Poster</string>
    <string name="movie_image">movie poster</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_deleteMovie">Delete</string>
    <string name="search_title">Find a Movie</string>

</resources>
